crates/aiken-lang/src/parser/expr/snapshots/expect_comment.snap
---
source: crates/aiken-lang/src/parser/expr/assignment.rs
description: "Code:\n\n/// Some user-defined custom comment\nexpect Some(x) = something.field\n"
---
Assignment {
    location: 37..69,
    value: FieldAccess {
        location: 54..69,
        label: "field",
        container: Var {
            location: 54..63,
            name: "something",
        },
    },
    patterns: [
        AssignmentPattern {
            pattern: Constructor {
                is_record: false,
                location: 44..51,
                name: "Some",
                arguments: [
                    CallArg {
                        label: None,
                        location: 49..50,
                        value: Var {
                            location: 49..50,
                            name: "x",
                        },
                    },
                ],
                module: None,
                constructor: (),
                spread_location: None,
                tipo: (),
            },
            annotation: None,
            location: 44..51,
        },
    ],
    kind: Expect {
        backpassing: false,
    },
    comment: Some(
        "Some user-defined custom comment",
    ),
}
