crates/aiken-lang/src/parser/expr/snapshots/expect_expect_let.snap
---
source: crates/aiken-lang/src/parser/expr/assignment.rs
description: "Code:\n\nexpect { let a = 42 } = foo"
---
Assignment {
    location: 0..21,
    value: Sequence {
        location: 7..21,
        expressions: [
            Assignment {
                location: 9..19,
                value: UInt {
                    location: 17..19,
                    value: "42",
                    base: Decimal {
                        numeric_underscore: false,
                    },
                },
                patterns: [
                    AssignmentPattern {
                        pattern: Var {
                            location: 13..14,
                            name: "a",
                        },
                        annotation: None,
                        location: 13..14,
                    },
                ],
                kind: Let {
                    backpassing: false,
                },
                comment: None,
            },
        ],
    },
    patterns: [
        AssignmentPattern {
            pattern: Constructor {
                is_record: false,
                location: 0..21,
                name: "True",
                arguments: [],
                module: None,
                constructor: (),
                spread_location: None,
                tipo: (),
            },
            annotation: None,
            location: 0..0,
        },
    ],
    kind: Expect {
        backpassing: false,
    },
    comment: None,
}
