crates/aiken-lang/src/parser/expr/snapshots/expect_let_in_let.snap
---
source: crates/aiken-lang/src/parser/expr/assignment.rs
description: "Code:\n\nlet a = { let b = 42 }"
---
Assignment {
    location: 0..22,
    value: Sequence {
        location: 8..22,
        expressions: [
            Assignment {
                location: 10..20,
                value: UInt {
                    location: 18..20,
                    value: "42",
                    base: Decimal {
                        numeric_underscore: false,
                    },
                },
                patterns: [
                    AssignmentPattern {
                        pattern: Var {
                            location: 14..15,
                            name: "b",
                        },
                        annotation: None,
                        location: 14..15,
                    },
                ],
                kind: Let {
                    backpassing: false,
                },
                comment: None,
            },
        ],
    },
    patterns: [
        AssignmentPattern {
            pattern: Var {
                location: 4..5,
                name: "a",
            },
            annotation: None,
            location: 4..5,
        },
    ],
    kind: Let {
        backpassing: false,
    },
    comment: None,
}
