crates/aiken-lang/src/parser/expr/snapshots/expect_trace_if_false.snap
---
source: crates/aiken-lang/src/parser/expr/assignment.rs
description: "Code:\n\nexpect foo?"
---
Assignment {
    location: 0..11,
    value: TraceIfFalse {
        location: 7..11,
        value: Var {
            location: 7..10,
            name: "foo",
        },
    },
    patterns: [
        AssignmentPattern {
            pattern: Constructor {
                is_record: false,
                location: 0..11,
                name: "True",
                arguments: [],
                module: None,
                constructor: (),
                spread_location: None,
                tipo: (),
            },
            annotation: None,
            location: 0..0,
        },
    ],
    kind: Expect {
        backpassing: false,
    },
    comment: None,
}
