crates/aiken-lang/src/parser/expr/snapshots/expect_unfinished_let.snap
---
source: crates/aiken-lang/src/parser/expr/assignment.rs
description: "Invalid code (parse error):\n\nlet a =\n// foo\nlet b = 42\n"
---
I spotted an unfinished assignment.
