crates/aiken-lang/src/parser/expr/snapshots/g1_element.snap
---
source: crates/aiken-lang/src/parser/expr/bytearray.rs
description: "Code:\n\n#<Bls12_381, G1>\"950dfd33da2682260c76038dfb8bad6e84ae9d599a3c151815945ac1e6ef6b1027cd917f3907479d20d636ce437a41f5\""
---
CurvePoint {
    location: 0..114,
    point: Bls12_381(
        G1(
            blst_p1 {
                x: blst_fp {
                    l: [
                        6044239372598254900,
                        11111890802926526657,
                        302563157772145122,
                        17359147598889707489,
                        6255098506247414666,
                        1773881592225990778,
                    ],
                },
                y: blst_fp {
                    l: [
                        9961536754182800925,
                        16512912018612749997,
                        10822258563185590636,
                        17742512098199848220,
                        16542676355910829810,
                        1246663995533626329,
                    ],
                },
                z: blst_fp {
                    l: [
                        8505329371266088957,
                        17002214543764226050,
                        6865905132761471162,
                        8632934651105793861,
                        6631298214892334189,
                        1582556514881692819,
                    ],
                },
            },
        ),
    ),
    preferred_format: HexadecimalString,
}
